@@ -1,5 +1,12 @@
 2003-04-02 Zoran Vasiljevic <zoran@archiware.com>
 
+	* threadCmd.c: removed checking of stopped flag
+	during walk of the list of active threads. This
+	solves some subtle thread reservation problems
+	with threads marked to unwind on error.
+	
+2003-04-02 Zoran Vasiljevic <zoran@archiware.com>
+
 	* threadCmd.c:
 	* threadPoolCmd.c:
 	* threadSpCmd.c:
